syntax = "proto2";

package commonroad_dynamic;

import "obstacle.proto";

message PhantomObstacle {
    required uint32 obstacle_id = 1;
    optional SetBasedPrediction prediction = 2;
}