syntax = "proto2";

package commonroad_scenario;

import "util.proto";
import "scenario_tags.proto";
import "planning_problem.proto";

message ScenarioMetaInformation {
    required string common_road_version = 1;
    required string benchmark_id = 2;
    required string license_name = 3;
    optional string license_text = 4;
    required TimeStamp date = 5;
    required string author = 6;
    required string affiliation = 7;
    required string source = 8;
    required double time_step_size = 9;
}



message CommonRoad {
    required ScenarioMetaInformation information = 1;
    required ScenarioTags scenario_tags = 2;
    required string map_id = 3;
    required string dynamic_id = 4;
    repeated PlanningProblem planning_problems = 5;
    repeated CooperativePlanningProblem multi_agent = 6;
}