syntax = "proto2";

package commonroad_common;

import "util.proto";

message MapID {
    required string country_id = 1;
    required string map_name = 2;
    required uint64 map_id = 3;
}

message ScenarioID {
    required bool cooperative = 1;
    required MapID map_id = 2;
    required uint64 configuration_id = 5;
    optional string obstacle_behavior = 6;
    optional uint64 prediction_id = 7;
    required string scenario_version = 8;
}

message FileInformation {
    required string license_name = 1;
    optional string license_text = 2;
    required commonroad_common.TimeStamp date = 3;
    required string author = 4;
    required string affiliation = 5;
    required string source = 6;
}

message ScenarioMetaInformation {
    required ScenarioID benchmark_id = 1;
    required FileInformation file_information = 3;
    required double time_step_size = 4;
}
