syntax = "proto2";

package commonroad_scenario;

import "planning_problem.proto";
import "scenario_meta_information.proto";

message CommonRoadScenario {
    required commonroad_common.ScenarioMetaInformation scenario_meta_information = 1;
    required string map_id = 3;
    required string dynamic_id = 4;
    repeated PlanningProblem planning_problems = 5;
    repeated CooperativePlanningProblem cooperative_planning_problems = 6;
}